--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,175 @@ Green: #00B172
 White: #FFF
 
 */
+
+@font-face {
+    font-family: spotify-circular;
+    src: url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Book.woff2) format('woff2'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Book.woff) format('woff'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Book.otf) format('opentype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: fallback
+}
+
+@font-face {
+    font-family: spotify-circular;
+    src: url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Bold.woff2) format('woff2'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Bold.woff) format('woff'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Bold.otf) format('opentype');
+    font-weight: 700;
+    font-style: normal;
+    font-display: fallback
+}
+
+@font-face {
+    font-family: spotify-circular;
+    src: url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Black.woff2) format('woff2'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Black.woff) format('woff'), url(https://encore.scdn.co/1.2.3/CircularSpotify-UI-Latin-OS2v3-Black.otf) format('opentype');
+    font-weight: 900;
+    font-style: normal;
+    font-display: fallback
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+html {
+    font-family: spotify-circular, Helvetica, Arial, sans-serif
+}
+
+body {
+    width: 100%;
+}
+
+.spotify-logo {
+    height: 60px;
+    margin-left: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    margin-top: 40px;
+    margin-left: 800px;
+    text-decoration: solid;
+
+}
+
+.nav-link {
+    margin-left: 30px;
+
+
+}
+
+.nav-link a {
+    text-decoration: none;
+    color: #1A1A1A;
+    font-size: 20px;
+    font-weight: none;
+}
+
+.nav-link a:visited {
+    color: #1A1A1A;
+}
+
+
+
+.header-section {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.section-one img {
+    display: flex;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+
+}
+
+.hero-banner {
+    background-image: url(/images/landing.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+
+}
+
+.hero-banner-content {
+    text-align: center;
+    position: absolute;
+    font-size: 60px;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hero-banner-content h1 {
+    font-size: 60px;
+
+
+}
+
+.hero-banner-content p {
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.feature-section {
+   padding:40px 10%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+
+.features {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+
+.section-title {
+    border-bottom: #00B172 4px solid;
+    font-size: 32px;
+    padding-bottom: 2px;
+    color: black;
+    margin-bottom: 80px;
+   
+}
+
+.feature-item {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-basis: 300px;
+    
+}
+
+.feature-item-image {
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.feature-item-title {
+    color: #00B172;
+    font-size: 28px;
+    margin-bottom: 16px;
+    flex-grow: 1;
+    flex-basis: 100%;
+    text-align: center;
+}
+
+.feature-item-content {
+    font-size: 24px;
+    color: #949494;
+    text-align: center;
+    
+}
+
+
